tests/analyzer/errors/non_struct_field_access.rv
fn main() {
    var a = 1
    print a.go
}

